# claude-plugins

./: README.md
.claude-plugin/: marketplace.json
.opencode/commands/: commit-push-mr.md  daily.md  jira-intake.md  plan.md
.opencode/plugins/: hooks.ts
.opencode/skills/obsidian-read/: SKILL.md
.opencode/skills/obsidian-task-notes/: SKILL.md
.opencode/skills/obsidian-write/: SKILL.md
.opencode/skills/python-compact-pytest/: SKILL.md
.opencode/skills/python-refine/: SKILL.md
.opencode/skills/tdd/: SKILL.md
deploy/: pyproject.toml
deploy/src/deploy_opencode/: cli.py  converter.py  hooks.py  models.py
deploy/tests/: conftest.py  test_converter.py
gitlab-workflow/.claude-plugin/: plugin.json
gitlab-workflow/commands/: commit-push-mr.md
mr-slides/skilles/create-slides/: SKILL.md
obsidian/: README.md
obsidian/.claude-plugin/: plugin.json
obsidian/commands/: daily.md  jira-intake.md  plan.md
obsidian/hooks/: hooks.json
obsidian/skills/knowledge-management/: SKILL.md
obsidian/skills/obsidian/: SKILL.md
obsidian/skills/read/: SKILL.md
obsidian/skills/task-notes/: SKILL.md
obsidian/skills/write/: SKILL.md
python/: README.md
python/.claude-plugin/: plugin.json
python/skills/compact-pytest/: SKILL.md
python/skills/refine/: SKILL.md
skills/obsidian/: INSTALL.md  README.md  skill.md
tdd/: README.md
tdd/.claude-plugin/: plugin.json
